# resqwave

./: grabpost.py  main.py  pyproject.toml  redtel.py  runner.py  utube.py
failure/: red.py  reddit.py  tele.py  twitter.py
scrapers/: laststraw.py  telegram.py  utube.py
